feat: 原本の配信と画面のプレビューを追加する
